--- a/templates/items/parts/item-header.html
+++ b/templates/items/parts/item-header.html
@@ -4,7 +4,7 @@
     <div class="header-details flexrow">
         <div class="header-background flexrow">
             <h1 class="charname">
-                <input name="name" type="text" value="{{item.name}}" data-tippy-content="{{ localize "SFRPG.ItemSheet.Header.ItemNameTooltip" }}" placeholder="{{ localize "SFRPG.ItemSheet.Header.ItemName" }}"/>
+                <input name="name" type="text" value="{{item.name}}" data-tooltip="{{ localize "SFRPG.ItemSheet.Header.ItemNameTooltip" }}" placeholder="{{ localize "SFRPG.ItemSheet.Header.ItemName" }}"/>
             </h1>
             <div class="item-subtitle">
                 <h4 data-tippy-content="Item Type" class="item-type">{{itemType}}</h4>
