--- a/styles/simple.css
+++ b/styles/simple.css
@@ -5036,14 +5036,18 @@ background: radial-gradient( #39879d ,#212c48  );
   margin: 0 0 0 3%;
   padding: 0;
 }
-.Alternityd100.sheet.actor.vehicle {
+.Alternityd100.sheet.actor.vehicle,
+.Alternityd100.sheet.actor.hazard
+ {
   min-width: 700px;
   min-height: 685px;
   /* ----------------------------------------- */
   /*  Sheet Header                             */
   /* ----------------------------------------- */
 }
-.Alternityd100.sheet.actor.vehicle .sheet-header {
+.Alternityd100.sheet.actor.vehicle .sheet-header,
+.Alternityd100.sheet.actor.hazard .sheet-header
+ {
   flex: 0 0 290px;
   vertical-align: text-top;
   overflow: hidden;
@@ -5058,10 +5062,12 @@ vertical-align: top;
 
 }
 
-.Alternityd100.sheet.actor.vehicle .sheet-header .hptable  {
+.Alternityd100.sheet.actor.vehicle .sheet-header .hptable ,
+.Alternityd100.sheet.actor.hazard .sheet-header .hptable  {
   vertical-align: top;
 }
-.Alternityd100.sheet.actor.vehicle .sheet-header .hptable thead  {
+.Alternityd100.sheet.actor.vehicle .sheet-header .hptable thead ,
+.Alternityd100.sheet.actor.hazard .sheet-header .hptable thead  {
  
   background-color: rgb(101, 110, 110);
   padding: 0px;
@@ -5071,7 +5077,8 @@ vertical-align: top;
 
   }
 
-  .Alternityd100.sheet.actor.vehicle ul.attributes li.attribute {
+  .Alternityd100.sheet.actor.vehicle ul.attributes li.attribute,
+  .Alternityd100.sheet.actor.hazard ul.attributes li.attribute {
     height: 100px;
     margin: 0 5px;
     border: 2px groove #eeede0;
@@ -5080,12 +5087,14 @@ vertical-align: top;
     vertical-align: text-top;
 
   }
-  .Alternityd100.sheet.actor.vehicle ul.attributes {
+  .Alternityd100.sheet.actor.vehicle ul.attributes,
+    .Alternityd100.sheet.actor.hazard ul.attributes {
     list-style: none;
     margin: 5px 0 0;
     padding: 0;
   }
-  .Alternityd100.sheet.actor.vehicle ul.attributes li.attribute {
+  .Alternityd100.sheet.actor.vehicle ul.attributes li.attribute,
+  .Alternityd100.sheet.actor.hazard ul.attributes li.attribute {
     height: 115px;
     margin: 0 5px;
     border: 2px groove #eeede0;
@@ -5094,19 +5103,22 @@ vertical-align: top;
     vertical-align: text-top;
   }
 
-  .Alternityd100.sheet.actor.vehicle .sheet-header .statTable thead  {
+  .Alternityd100.sheet.actor.vehicle .sheet-header .statTable thead ,
+  .Alternityd100.sheet.actor.hazard .sheet-header .statTable thead {
  height: 20px;
 
 
   
     } 
-    .Alternityd100.sheet.actor.vehicle .sheet-header .statTable tr  {
+    .Alternityd100.sheet.actor.vehicle .sheet-header .statTable tr ,
+    .Alternityd100.sheet.actor.hazard .sheet-header .statTable tr  {
       height: 20px;
      
      
        
          } 
-  .Alternityd100.sheet.actor.vehicle .sheet-header .hptable tr {
+  .Alternityd100.sheet.actor.vehicle .sheet-header .hptable tr,
+  .Alternityd100.sheet.actor.hazard .sheet-header .hptable tr {
  
   background-color: rgb(101, 110, 110);
   padding: 0px;
@@ -5116,24 +5128,32 @@ vertical-align: top;
 
   }
 
-.Alternityd100.sheet.actor.vehicle .sheet-header .charlevel {
+.Alternityd100.sheet.actor.vehicle .sheet-header .charlevel ,
+.Alternityd100.sheet.actor.hazard .sheet-header .charlevel {
   flex: 0 0 180px;
   padding: 0 5px 2px;
 }
-.Alternityd100.sheet.actor.vehicle .sheet-header .charlevel .level {
+.Alternityd100.sheet.actor.vehicle .sheet-header .charlevel .level,
+.Alternityd100.sheet.actor.hazard .sheet-header .charlevel .level  {
   height: 28px;
 }
-.Alternityd100.sheet.actor.vehicle .summary li {
+.Alternityd100.sheet.actor.vehicle .summary li,
+.Alternityd100.sheet.actor.hazard .summary li {
   width: 100%;
 }
-.Alternityd100.sheet.actor.vehicle .summary li input[type="text"] {
+.Alternityd100.sheet.actor.vehicle .summary li input[type="text"],
+.Alternityd100.sheet.actor.hazard .summary li input[type="text"]  {
   width: 66%;
 }
-.Alternityd100.sheet.actor.vehicle .form-group {
+.Alternityd100.sheet.actor.vehicle .form-group ,
+.Alternityd100.sheet.actor.hazard .form-group{
   padding: 0 5px;
 }
 .Alternityd100.sheet.actor.vehicle .form-group .form-fields input[type="text"],
-.Alternityd100.sheet.actor.vehicle .form-group .form-fields select {
+.Alternityd100.sheet.actor.vehicle .form-group .form-fields select ,
+.Alternityd100.sheet.actor.hazard .form-group .form-fields input[type="text"],
+.Alternityd100.sheet.actor.hazard .form-group .form-fields select 
+{
   border: 1px solid #7a7971;
   background: rgba(0, 0, 0, 0.05);
 }
