--- a/templates/items/psionic.html
+++ b/templates/items/psionic.html
@@ -96,7 +96,15 @@
                     </div>
             </div>
                         
-
+            {{!-- Cost--}}
+            <div class="form-group">
+                <label>{{ localize "Cost" }}</label>
+                <div class="form-fields">
+                    <input type="number" name="system.baseCost" value="{{itemData.baseCost}}"/>
+                    
+                 
+                </div>
+            </div>
 
 
 
