--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -41,9 +41,10 @@
     <th class="resource-headx" title="{{ systemData.attributes.stu.label }}" >
     <button style="height: 30px;"  class="clickapplydamge" data-tooltip-direction="UP" data-tooltip="Apply Temp Damage" >Stun</button>
     </th>
-    <th class="resource-headx" title="{{ systemData.attributes.wou.tooltip }}">
-        Wound
-    </th>
+    <th class="resource-headx" title="{{ systemData.attributes.wou.label }}" >
+        <button style="height: 30px;"  class="rollphysire" data-tooltip-direction="UP" data-tooltip="Roll Stun Recovery" >Wound</button>
+        </th>
+
     <th class="resource-headx" title="{{ systemData.attributes.mor.tooltip }}">
         Mortal
     </th>
