--- a/templates/sidebar/combat-tracker.html
+++ b/templates/sidebar/combat-tracker.html
@@ -70,6 +70,12 @@
 
                 <div class="combatant-controls flexrow">
                     
+                    <a  class="combatant-control" >
+                    
+                        <img class="combatant-control active" data-tooltip="Roll Stun recovery check: Stunned Round {{this.flags.downround}}" data-control="rollPhysire"src="systems/Alternityd100/icons/conditions/physical_resolve.webp"/>
+
+                    </a>
+
                     {{#if this.isPilot}}
                     <a  class="combatant-control active"  >
                     
